# agent_tutorials

./: .gitignore  README.md
agent_write/: README.md  final_doc_gpt-4o.md  final_doc_llama3.1-70b-groq.md  final_doc_westworld.md  graph.py  main.py  plan_gpt-4o.md  plan_llama3.1-70b-groq.md  tools.py
agent_write/LLMs/: llm.py
agent_write/chains/: plan_chain.py  write_chain.py
agent_write/chains/prompts/: plan.txt  write.txt
agent_write/nodes/: __init__.py  planning_node.py  saving_node.py  writing_node.py
blog_post_creator/: README.md  pyproject.toml
blog_post_creator/src/blog_post_creator/: crew.py  main.py
blog_post_creator/src/blog_post_creator/config/: agents.yaml  tasks.yaml
ollama_agents/llama3_local/: llama3_json.py  llama3_ollama_functions.py  llama3_ollama_structured_output.py  phi3_ollama_functioncalling.py  phi3_ollama_structured_output.py  testing_ollama.py
